--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>keycloak</artifactId>
 	<version>0.0.1</version>
 	<name>auth</name>
-	<description>Bizbox Groupware Authentication Service Provider Interface (SPI) for Keycloak.</description>
+	<description>Authentication Service Provider Interface (SPI) for Keycloak.</description>
 	<properties>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
